Improves contrast and resolves #76

--- a/themes/hugo-ror/assets/sass/partials/_hugo-ror.scss
+++ b/themes/hugo-ror/assets/sass/partials/_hugo-ror.scss
@@ -2006,7 +2006,7 @@ body {
     border-radius: .1875rem;
     padding: 2em;
     cursor: pointer;
-    background-color: #888;
+    background-color: #505759;
     color: #FFF !important;
     text-decoration: none;
     transition: 0.25s;
